--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate-path:       "/portfolio/page:num/"
 #sass
 sass:
   style: compressed
-  sass_dir: public/css
+  sass_dir: _assets/css
 
   load_paths:
     - _assets
@@ -33,7 +33,7 @@ author:
   email:             karagozkadir@hotmail.com
 
 # Custom vars
-version:             1.1.1
+version:             1.0.0
 
 #gems
 plugins:
