--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate-path:       "/portfolio/page:num/"
 #sass
 sass:
   style: compressed
-  sass_dir: _assets/css
+  sass_dir: public/css
 
   load_paths:
     - _assets
